edit(budget): перенесла логику управления коллекцией из мапера в сервис