@@ -4,35 +4,28 @@ import com.teamfourpixels.dto.*;
 import com.teamfourpixels.entity.*;
 import org.mapstruct.*;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Mapper(componentModel = "spring")
 public interface BudgetMapper {
 
     BudgetDto toDto(Budget entity);
 
-    BudgetLimit toLimitEntity(LimitDto dto, Budget budget);
-
-    default List<BudgetLimit> toLimitEntities(List<LimitDto> dtos, Budget budget) {
-        return dtos.stream()
-                .map(dto -> {
-                    BudgetLimit limit = toLimitEntity(dto, budget);
-                    limit.setBudget(budget);
-                    return limit;
-                })
-                .toList();
+    default List<BudgetLimit> toLimitEntities(List<LimitDto> limitDtos, Budget budget) {
+        return limitDtos.stream()
+                .map(dto -> BudgetLimit.builder()
+                        .budget(budget)
+                        .categoryId(dto.getCategoryId())
+                        .limitValue(dto.getLimitValue())
+                        .limitType(dto.getLimitType())
+                        .build())
+                .collect(Collectors.toList());
     }
 
-    default Budget toEntity(CreateBudgetRequest request, Budget existingBudget, Long userId) {
-        existingBudget.setUserId(userId);
-        existingBudget.setYear(request.getYear());
-        existingBudget.setMonth(request.getMonth());
-        existingBudget.setTotalIncome(request.getTotalIncome());
-
-        existingBudget.getLimits().clear();
-        existingBudget.getLimits().addAll(
-                toLimitEntities(request.getLimits(), existingBudget)
-        );
-
-        return existingBudget;
+    default void updateBudgetFields(Budget budget, CreateBudgetRequest request, Long userId, Integer year, Integer month) {
+        budget.setUserId(userId);
+        budget.setYear(year);
+        budget.setMonth(month);
+        budget.setTotalIncome(request.getTotalIncome());
     }
 }
